[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }

hyper = { version = "1", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
axum-server = "0.7.2"
uuid = {version = "1.17.0", features = ["v4"]}
walkdir = "2.5.0"
zip = "4.2.0"
tokio-util = "0.7.15"
reqwest = { version = "0.12.22", features = ["json"]}
dotenvy = "0.15.7"

actix-web = "4"
notify = "8.1.0"
tera = "1.19"          # * for templating JSX/HTML
tokio-tungstenite = "0.27.0" # * optional for live WebSockets
regex = "1.11.1"
once_cell = "1.21.3"
futures = "0.3.31"
redis = { version = "0.32.4", features = ["tokio-comp", "default", "connection-manager"]}
tokio-stream = "0.1.17"
futures-util = "0.3.31"
chrono = "0.4.41"

